k8s/order_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: g1-a-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: amjadfqs/g1_a_order_service_k8s:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: g1-a-order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8080
